--- a/foundations/flex/03-flex-header-2/index.html
+++ b/foundations/flex/03-flex-header-2/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="header">
+        <div class="left-content">
       <div class="logo">
         LOGO
       </div>
@@ -17,10 +18,13 @@
         <li><a href="https://google.com">link-two</a></li>
         <li><a href="https://google.com">link-three</a></li>
       </ul>
-      <button class="notifications">
+        </div>
+        <div class="right-content">
+        <button class="notifications">
         1 new notification
       </button>
       <div class="profile-image"></div>
+      </div>
     </div>
   </body>
 </html>
